fix: spinner alignment on chrome. revert to old style with improved fix

--- a/frontend/src/styles/full-screen-overlay.scss
+++ b/frontend/src/styles/full-screen-overlay.scss
@@ -69,18 +69,20 @@
 
 .fullscreen-overlay {
 
-  text-align: center;
   width: 100vw;
   max-width: 100%;
   height: 100%;
   position: absolute;
   z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   top: 0;
 
   img {
-    max-width: 100px;
+    width: 100px;
     margin-bottom: 5vh;
-    margin-top: 22.5vh;
   }
 
   &.paused {
@@ -105,7 +107,7 @@
     color: #fff;
     text-align: center;
     font-size: calc(1rem + 4vw);
-    margin: auto;
+    margin: 0;
     max-width: 70%;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.2);
   }
